attempt to fix mobile flexbox gaps

--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@ body {
 	display:flex;
 	flex-direction:column;
 	justify-content:space-around;
+	align-items:center;
+	align-content:center;
 }
 
 .row {
